--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "resume-fr",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.19.0"
+  },
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^3.1.9",
